new proofread of fixpoint

--- a/main.tex
+++ b/main.tex
@@ -115,6 +115,7 @@
 %%\newrefformat{suppl}{Appendix~\ref{#1}}
 \newrefformat{ex}{Example~\ref{#1}}
 %%\newrefformat{eq}{Eq.~\eqref{#1}}
+\newrefformat{alg}{Algorithm~\ref{#1}}
 \def\pref{\prettyref}
 
 %Algorithme
@@ -342,7 +343,7 @@ The originality of our approach relies in the exhaustive enumeration of all poss
 
 
 
-\newcommand{\benchmarksfootnote}{\footnote{All programs and benchmarks are available at http://www.irccyn.ec-nantes.fr/~benabdal/automata-networks-analysis.zip}}
+\newcommand{\benchmarksfootnote}{\footnote{All programs and benchmarks are available at \url{http://www.irccyn.ec-nantes.fr/~benabdal/automata-networks-analysis.zip}}}
 
 \section{Introduction}
 \input{parts/intro.tex}
