begin new proofread of attractors

--- a/main.tex
+++ b/main.tex
@@ -361,7 +361,7 @@ The originality of our approach relies in the exhaustive enumeration of all poss
 \label{sec:fixpoint}
 \input{parts/fixPoint}
 
-\section{Attractors }
+\section{Fixed-size attractors enumeration}
 \label{sec:attractors}
 \input{parts/attractors}
 
