--- a/parts/fixPoint.tex
+++ b/parts/fixPoint.tex
@@ -100,7 +100,7 @@ selectProc("d",0) selectProc("e",0)
 %\end{changemargin}
 \end{example}
 
-In \pref{alg:PH-fixpont} we give an imperative algorithm
+In \pref{alg:PH-fixpont} we give an imperative pseudocode
 that corresponds to the computation of
 all fixed points in a given PH network.
 We give this algorithm only for educational purposes
